security/pod-security.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: leveldb
  labels:
    name: leveldb
    purpose: leveldb-application
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
